--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -36,7 +36,7 @@ story_location: "_bmad-output/implementation-artifacts"
 development_status:
   # Epic 1: Instant Analysis Companion
   epic-1: in-progress
-  1-1-project-initialization-build-setup: review
+  1-1-project-initialization-build-setup: done
   1-2-side-panel-ipc-bridge-architecture: backlog
   1-3-secure-settings-api-key-management: backlog
   1-4-ai-service-layer-token-streaming: backlog
