--- a/package.json
+++ b/package.json
@@ -4,18 +4,21 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc -b && vite build",
+    "dev": "npm run build:content && vite",
+    "build": "npm run build:content && vue-tsc -b && vite build",
     "preview": "vite preview",
-    "build:content": "tailwindcss -i src/content/styles.css -o src/content/dist.css -c tailwind.content.config.js"
+    "build:content": "tailwindcss -i src/content/styles.css -o src/content/dist.css -c tailwind.content.config.js --minify"
   },
   "dependencies": {
+    "@vueuse/core": "^14.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.562.0",
+    "pinia": "^3.0.4",
     "radix-vue": "^1.9.17",
     "tailwind-merge": "^3.4.0",
-    "vue": "^3.5.24"
+    "vue": "^3.5.24",
+    "webext-bridge": "^6.0.1"
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "^2.3.0",
