feat: 初始化浏览器扩展核心架构，包括IPC通信、侧边面板、内容脚本和基础AI/设置逻辑

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -37,7 +37,7 @@ development_status:
   # Epic 1: Instant Analysis Companion
   epic-1: in-progress
   1-1-project-initialization-build-setup: done
-  1-2-side-panel-ipc-bridge-architecture: backlog
+  1-2-side-panel-ipc-bridge-architecture: done
   1-3-secure-settings-api-key-management: backlog
   1-4-ai-service-layer-token-streaming: backlog
   1-5-text-analysis-ui-the-typewriter: backlog
