feat: 添加侧边栏AI分析功能，并实现设置管理、API密钥验证及AI核心逻辑。

--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "build:content": "tailwindcss -i src/content/styles.css -o src/content/dist.css -c tailwind.content.config.js --minify"
   },
   "dependencies": {
+    "@google/genai": "^1.34.0",
     "@vueuse/core": "^14.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jsonrepair": "^3.13.1",
     "lucide-vue-next": "^0.562.0",
     "pinia": "^3.0.4",
     "radix-vue": "^1.9.17",
