--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -38,10 +38,10 @@ development_status:
   epic-1: in-progress
   1-1-project-initialization-build-setup: done
   1-2-side-panel-ipc-bridge-architecture: done
-  1-3-secure-settings-api-key-management: backlog
-  1-4-ai-service-layer-token-streaming: backlog
-  1-5-text-analysis-ui-the-typewriter: backlog
-  1-6-clipboard-auto-capture-shortcut: backlog
+  1-3-secure-settings-api-key-management: done
+  1-4-ai-service-layer-token-streaming: done
+  1-5-text-analysis-ui-the-typewriter: done
+  1-6-clipboard-auto-capture-shortcut: done
   1-7-interactive-dictionary-q-a: backlog
   1-8-image-ocr-integration: backlog
   epic-1-retrospective: optional
