--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -42,7 +42,7 @@ development_status:
   1-4-ai-service-layer-token-streaming: done
   1-5-text-analysis-ui-the-typewriter: done
   1-6-smart-selection-and-paste: done
-  1-7-interactive-dictionary-q-a: backlog
+  1-7-interactive-dictionary-q-a: done
   1-8-image-ocr-integration: backlog
   epic-1-retrospective: optional
 
