--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@google/genai": "^1.34.0",
+    "@types/markdown-it": "^14.1.2",
     "@vueuse/core": "^14.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "jsonrepair": "^3.13.1",
     "lucide-vue-next": "^0.562.0",
+    "markdown-it": "^14.1.0",
     "pinia": "^3.0.4",
     "radix-vue": "^1.9.17",
     "tailwind-merge": "^3.4.0",
