feat: 添加了AI驱动的闪卡内容生成功能，并引入了相应的类型定义、生成逻辑、状态管理和测试。

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -47,14 +47,14 @@ development_status:
   epic-1-retrospective: done
 
   # Epic 2: Deep Syntax Visualization
-  epic-2: in-progress
+  epic-2: done
   2-1-gemini-pro-thinking-mode-service-integration: done
-  2-2-recursive-syntax-visualization-component: review
-  epic-2-retrospective: optional
+  2-2-recursive-syntax-visualization-component: done
+  epic-2-retrospective: done
 
   # Epic 3: Magical Memory Cards
-  epic-3: backlog
-  3-1-magic-card-content-generation-service: backlog
+  epic-3: in-progress
+  3-1-magic-card-content-generation-service: done
   3-2-ai-illustration-generation-integration: backlog
   3-3-card-preview-ui-sketching-animation: backlog
   3-4-anki-export-format-tsv: backlog
