--- a/_bmad/bmm/config.yaml
+++ b/_bmad/bmm/config.yaml
@@ -13,6 +13,6 @@ tea_use_playwright_utils: false
 
 # Core Configuration Values
 user_name: 老大
-communication_language: Chinese
-document_output_language: Chinese
+communication_language: 简体中文
+document_output_language: 简体中文
 output_folder: "{project-root}/_bmad-output"
