--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "dev": "npm run build:content && vite",
     "build": "npm run build:content && vue-tsc -b && vite build",
     "preview": "vite preview",
-    "build:content": "tailwindcss -i src/content/styles.css -o src/content/dist.css -c tailwind.content.config.js --minify"
+    "build:content": "tailwindcss -i src/content/styles.css -o src/content/dist.css -c tailwind.content.config.js --minify",
+    "test": "vitest",
+    "test:run": "vitest run",
+    "test:watch": "vitest --watch",
+    "test:ui": "vitest --ui"
   },
   "dependencies": {
     "@google/genai": "^1.34.0",
