--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -56,7 +56,7 @@ development_status:
   epic-3: in-progress
   3-1-magic-card-content-generation-service: done
   3-2-ai-illustration-generation-integration: done
-  3-3-card-preview-ui-sketching-animation: backlog
+  3-3-card-preview-ui-sketching-animation: done
   3-4-anki-export-format-tsv: backlog
   epic-3-retrospective: optional
 
