--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -57,6 +57,6 @@ development_status:
   3-1-magic-card-content-generation-service: done
   3-2-ai-illustration-generation-integration: done
   3-3-card-preview-ui-sketching-animation: done
-  3-4-anki-export-format-tsv: backlog
+  3-4-anki-export-format-tsv: done
   epic-3-retrospective: optional
 
