--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -63,8 +63,8 @@ development_status:
   # Epic 4: Polishing & UX Refinement
   epic-4: in-progress
   4-1-system-settings-prompt-management: done
-  4-2-bubble-ui-simplification-sidebar-migration: backlog
-  4-3-rapid-ai-services-translation-token-detail: backlog
+  4-2-bubble-ui-simplification-sidebar-migration: done
+  4-3-rapid-ai-services-translation-token-detail: review
   4-4-anki-export-strategy-refactor: backlog
   4-5-ui-visual-enhancements: backlog
 
