--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -64,7 +64,8 @@ development_status:
   epic-4: in-progress
   4-1-system-settings-prompt-management: done
   4-2-bubble-ui-simplification-sidebar-migration: done
-  4-3-rapid-ai-services-translation-token-detail: review
-  4-4-anki-export-strategy-refactor: backlog
-  4-5-ui-visual-enhancements: backlog
+  4-3-rapid-ai-services-translation-token-detail: done
+  4-4-sentence-magic-card: done
+  4-5-word-magic-card: backlog
+  4-6-ui-visual-enhancements: backlog
 
