feat: 添加单词魔法卡片功能，包含UI组件、AI生成逻辑及测试。

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -66,6 +66,6 @@ development_status:
   4-2-bubble-ui-simplification-sidebar-migration: done
   4-3-rapid-ai-services-translation-token-detail: done
   4-4-sentence-magic-card: done
-  4-5-word-magic-card: backlog
+  4-5-word-magic-card: done
   4-6-ui-visual-enhancements: backlog
 
