feat: 添加魔法卡片、单词卡片、句子卡片、Toast通知系统及分析结果UI组件。

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -67,5 +67,5 @@ development_status:
   4-3-rapid-ai-services-translation-token-detail: done
   4-4-sentence-magic-card: done
   4-5-word-magic-card: done
-  4-6-ui-visual-enhancements: backlog
+  4-6-ui-visual-enhancements: review
 
