--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vueuse/core": "^14.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dexie": "^4.2.1",
     "jsonrepair": "^3.13.1",
     "lucide-vue-next": "^0.562.0",
     "markdown-it": "^14.1.0",
