feat: 用户登录，服务器统一提供配额

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,12 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Environment files
+.env
+.env.local
+.env.*.local
+
+# Server specific
+server/node_modules
+server/dist
