--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -14,6 +14,13 @@ services:
       - JWT_SECRET=${JWT_SECRET:-change-this-in-production}
       - JWT_EXPIRES_IN=7d
       - NODE_ENV=production
+      # AI Configuration
+      - AI_API_KEY=${AI_API_KEY}
+      - AI_CHAT_ENDPOINT=${AI_CHAT_ENDPOINT}
+      - AI_IMAGE_ENDPOINT=${AI_IMAGE_ENDPOINT}
+      - AI_CHAT_MODEL=${AI_CHAT_MODEL}
+      - AI_CHAT_MODEL_FAST=${AI_CHAT_MODEL_FAST}
+      - AI_IMAGE_MODEL=${AI_IMAGE_MODEL}
     depends_on:
       db:
         condition: service_healthy
